force-app/main/default/objects/Superbill_Diagnosis__c/Superbill_Diagnosis__c.object-meta.xml
<CustomObject>
    <description>Ordered diagnosis snapshot used by a superbill and its charge-line diagnosis pointers.</description>
    <label>Superbill Diagnosis</label>
    <nameField>
        <displayFormat>SB-DX-{00000000}</displayFormat>
        <label>Superbill Diagnosis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Superbill Diagnoses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>