force-app/main/default/objects/Superbill_Diagnosis__c/fields/Diagnosis_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code_System__c</fullName>
    <label>Diagnosis Code System</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetName>LogicEMR_Code_System</valueSetName></valueSet>
</CustomField>