force-app/main/default/objects/Superbill_Diagnosis__c/fields/Diagnosis_Type__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Type__c</fullName>
    <label>Diagnosis Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>