force-app/main/default/objects/Superbill_Diagnosis__c/fields/Encounter_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Diagnosis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encounter Diagnosis</label>
    <referenceTo>EncounterDiagnosis__c</referenceTo>
    <relationshipLabel>Superbill Diagnosis Snapshots</relationshipLabel>
    <relationshipName>Superbill_Diagnosis_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>