force-app/main/default/objects/Superbill_Diagnosis__c/fields/Superbill__c.field-meta.xml
<CustomField>
    <fullName>Superbill__c</fullName>
    <label>Superbill</label>
    <referenceTo>Superbill__c</referenceTo>
    <relationshipLabel>Diagnoses</relationshipLabel>
    <relationshipName>Diagnoses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>